@@ -1,8 +1,10 @@
 import org.jetbrains.kotlin.gradle.dsl.JvmTarget
+import java.util.Locale
 
 plugins {
     kotlin("jvm") version "2.1.0" // Kotlin Plugin
     id("org.openjfx.javafxplugin") version "0.1.0" // JavaFX Plugin
+    id("com.gradleup.shadow") version "8.3.0" //Shadow Plugin
     application
 }
 
@@ -38,6 +40,39 @@ javafx {
 
 application {
     mainClass.set("idiotamspielen.vttproject.MainKt") // Hauptklasse
+}
+
+tasks {
+    shadowJar {
+        archiveBaseName.set("VTT") // Name der JAR-Datei
+        archiveClassifier.set("")          // Entfernt das "-all"
+        archiveVersion.set(project.version.toString())        // Nutzt die in der Version definierte Nummer
+        mergeServiceFiles()                // Wichtig für das Zusammenführen
+        dependencies {
+            include(dependency("org.openjfx:javafx-controls"))
+            include(dependency("org.openjfx:javafx-fxml"))
+        }
+    }
+}
+
+tasks.register<Exec>("jpackage") {
+    group = "distribution"
+    description = "Erstelle ein distributables Anwendungspaket"
+
+    dependsOn("shadowJar") // Stelle sicher, dass die JAR-Datei erstellt wird
+
+    commandLine = listOf(
+        "jpackage", // Stelle sicher, dass `jpackage` zur Verfügung steht
+        "--input", "build/libs", // Ort, der die generierte JAR enthält
+        "--dest", "build/jpackage", // Ort, wo das distributable Paket landen soll
+        "--name", "VTT", // Der Name der Anwendung
+        "--main-jar", "VTT-0.2.3-SNAPSHOT.jar", // Deine Fat-JAR-Datei
+        "--main-class", "idiotamspielen.vttproject.MainKt", // Deine Main-Klasse
+        "--type", if (System.getProperty("os.name").lowercase(Locale.getDefault()).contains("windows")) "exe" else "app-image",
+        "--add-modules", "javafx.controls,javafx.fxml",
+        "--java-options",
+            "--enable-preview"
+    )
 }
 
 tasks.withType<Test> {
